# rojak

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  ruff.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  python-package.yml  release.yaml  release.yml  sphinx.yml
docs/: Makefile  conf.py  index.rst
docs/_static/: style.css
docs/_templates/autosummary/: base.rst  class.rst  module.rst
docs/api/: index.rst  references.rst
docs/userguide/: edr-snapshot.py  example-extensions.rst  example-uses.rst  examples.rst  getting_started.rst  index.rst  installguide.rst
joss/: paper.bib  paper.md
src/rojak/: __init__.py  __main__.py
src/rojak/atmosphere/: contrails.py  jet_stream.py  regions.py
src/rojak/cli/: __init__.py  data_interface.py  lite_interface.py  main.py
src/rojak/core/: analysis.py  calculations.py  constants.py  data.py  derivatives.py  distributed_tools.py  geometric.py  indexing.py
src/rojak/datalib/: utils.py
src/rojak/datalib/ecmwf/: constants.py  era5.py
src/rojak/datalib/madis/: amdar.py
src/rojak/datalib/ukmo/: amdar.py
src/rojak/orchestrator/: configuration.py  lite_configuration.py  lite_controller.py  mediators.py  turbulence.py
src/rojak/plot/: regions_plotter.py  turbulence_plotter.py  utilities.py
src/rojak/turbulence/: analysis.py  calculations.py  contrails.py  diagnostic.py  jet_stream.py  mediators.py  metrics.py  verification.py
src/rojak/utilities/: __init__.py  types.py
tests/: conftest.py  test_atmosphere_contrails.py  test_atmosphere_jet_stream.py  test_atmosphere_regions.py  test_cli.py  test_cli_data.py  test_configuration.py  test_core_calculations.py  test_core_data.py  test_core_geometric.py  test_core_indexing.py  test_derivatives.py  test_orchestrator_mediators.py  test_orchestrator_turbulence.py  test_plot_turbulence_plotter.py  test_turbulence_analysis.py  test_turbulence_calculations.py  test_turbulence_contrails.py  test_turbulence_diagnostics.py  test_turbulence_jet_stream.py  test_turbulence_mediators.py  test_turbulence_metrics.py  test_turbulence_verification.py
tests/_static/: flat_data.csv  test_era5_data.nc
tests/integration/: conftest.py  test_madis_amdar.py  test_turbulence_launcher.py
