[project]
name = "rojak"
version = "0.1.0"
description = "rojak a package with a blend of features -- from turbulence diagnostics to aeroelasticity"
readme = "README.md"
authors = [
    { name = "Hui Ling Wong", email = "huilingw312@gmail.com" }
]
keywords = ["turbulence", "climate", "contrails", "avaiation", "aerospace", "aeroelasticity", "meteorology"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

requires-python = ">=3.12"
dependencies = [
    "crick", # necessary for dask.percentile method
    "dask",
    "distributed",
    "h5netcdf",
    "pydantic",
    "pyproj",
    "pyyaml",
    "scipy",
    "typer",
    "xarray",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
rojak = "rojak.cli.main:app"

[dependency-groups]
#complete = ["rojak[ecmwf,amdar]"]
dev = [
    "doc8",
    "pandas-stubs",
    "pre-commit",
    "pyright",
    "ruff",
    "bokeh", # For dask dashboard
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
]
docs = [
    "jupyter-sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx",
]
ecmwf = [
    "cdsapi>=0.7.5",
]
amdar = [
    "dask-geopandas",
    "geopandas",
    "netcdf4",
    "pyarrow",
]
plot = [
    "cartopy",
    "matplotlib",
    "pypalettes",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.doc8]
max-line-length = 120
ignore-path = "docs/_templates"
