[project]
name = "rojak_cat"
dynamic = ["version"]
description = "rojak a package with a blend of features -- from turbulence diagnostics to aeroelasticity"
readme = "README.md"
authors = [
    { name = "Hui Ling Wong", email = "71387295+wong-hl@users.noreply.github.com " }
]
keywords = ["turbulence", "climate", "contrails", "avaiation", "aerospace", "aeroelasticity", "meteorology"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.12"
dependencies = [
    "crick", # necessary for dask.percentile method
    "dask",
    "distributed",
    "h5netcdf",
    "pydantic",
    "pyproj",
    "pyyaml",
    "scipy",
    "typer",
    "xarray",
]

[project.urls]
repository = "https://github.com/ImperialCollegeLondon/rojak"
documentation = "https://imperialcollegelondon.github.io/rojak/"
issues = "https://github.com/ImperialCollegeLondon/rojak/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project.scripts]
rojak = "rojak.cli.main:app"

[dependency-groups]
#complete = ["rojak[ecmwf,amdar]"]
dev = [
    "doc8",
    "pandas-stubs",
    "pre-commit",
    "pyright",
    "ruff",
    "bokeh", # For dask dashboard
    "scipy-stubs",
    "hatch-vcs",
]
test = [
    "pytest",
    "pytest-cov", # code coverage
    "pytest-mock", # mocking
    "pytest-xdist", # distributed testing
]
docs = [
    "jupyter-sphinx",
    "myst-parser",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx-design",
]
ecmwf = [
    "cdsapi>=0.7.5",
]
amdar = [
    "dask-geopandas",
    "geopandas",
    "netcdf4",
    "pyarrow",
]
plot = [
    "cartopy",
    "matplotlib",
    "pypalettes",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.doc8]
max-line-length = 120
ignore-path = "docs/_templates"

[tool.hatch.build.targets.wheel]
packages = ["src/rojak"]

[tool.hatch.version]
source = "vcs"